# UnifiedScheduler

./: credentials.json  main.py  pyproject.toml
.credentials/: token.pickle
.streamlit/: config.toml
models/: database.py  finance.py  local_database.db
myenv/: pyvenv.cfg
services/: ai_prioritization.py  apple_calendar.py  finance_manager.py  gamification.py  google_calendar.py  task_manager.py
utils/: date_helpers.py  deduplication.py
visualization/: finance_charts.py  progress_charts.py
